# noisy-radio

./: Cargo.toml  README.md  shell.nix  todo.txt
src/: main.rs  radio.rs
src/channels/: .spotdl-cache
src/channels/synthwave/: .spotdl-cache
