[package]
authors = ["Jevin Maltais <jevin@quickjack.ca>"]
edition = "2018"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "noisy-radio2"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.17.0"
tui = "0.19"
crossterm = "0.25"
glob = "0.3.1"
rand = "0.8.5"

[[bin]]
name = "nosiy-radio"
path = "src/main.rs"
